--- a/site/int.html
+++ b/site/int.html
@@ -29,7 +29,7 @@
         <h1>Integrantes:</h1>
         <table>
             <tr>
-                <td class="img" rowspan="2"><img src="../imgs/white_hat.jpg" alt="Foto de Mateus"></td>
+                <td class="img" rowspan="2"><img src="../imgs/white_hat.png" alt="white_hat_mateus"></td>
                 <td class="name">Mateus Ferreira da Costa Júnior</td>
             </tr>
             <tr>
@@ -40,7 +40,7 @@
         <table>
             <tr>
                 <td class="name">Hiago Bernardo Cavalcante</td>
-                <td class="img" rowspan="2"><img src="../imgs/black_hat.png" alt="Foto de Hiago"></td>
+                <td class="img" rowspan="2"><img src="../imgs/black_hat.png" alt="black_hat_hiago"></td>
             </tr>
             <tr>
                 <td class="sub">@hia_bernardo</td>
