--- a/site/login.html
+++ b/site/login.html
@@ -19,7 +19,7 @@
 			<div>
 				<img class="img" src="../imgs/imagerandom.png" onclick="goBack()" alt="Você sabia?" />
 			</div>
-			<form method="post" action="login.html" autocomplete="off">
+			<form method="post" action="../site/login.html" autocomplete="off">
 				<input type="text" name="usuario" placeholder="Usuário" autofocus id="user" required />
 				<input type="password" name="senha" placeholder="Senha" id="pass" required />
 				<input class="submit" type="submit" onclick="dados()" value="Enviar">
